saw-web/src/main/javascript/app/common/components/report-grid/report-grid.component.scss
.report-dx-grid {
  max-width: 100% !important;
  border: 1px solid #DEDEDE;

  .dx-datagrid-table {
    .dx-row {
      > td {
        padding: 7px 30px 7px 10px;
        vertical-align: bottom;
      }

      &.dx-header-row {
        background-color: #F3F5F8;

        > td {
          border-bottom: none;
        }
      }

      &.dx-data-row {
        background-color: #FFF;

        &.dx-row-alt {
          background-color: #F7F9FC;
        }
      }
    }
  }
}

.dx-menu-items-container {
  .grid-menu-item {
    width: 50px;

    &.m-small {
      font-size: 12px;
    }
  }
}

.header-details {
  height: 24px;
}

.cell-aggregate-icon {
  float: left;
}

.cell-caption {
  padding-top: 3px;
  float: left;
  text-transform: uppercase;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  width: 152px;
}

.column-menu {
  position: absolute;
  padding-top: 6px;
}

.cell-aggregate-icon .icon-Sum {
  padding-top: 6px;
}

.cell-aggregate-icon .icon-Count,
.icon-Percentage {
  margin-top: -5px;
}

